--- a/app/src/main/res/layout/activity_flash.xml
+++ b/app/src/main/res/layout/activity_flash.xml
@@ -5,20 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.FlashActivity">
+    tools:context=".view.FlashActivity"
+    android:background="@color/white">
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="register" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Login" />
 
 </LinearLayout>
