--- a/app/src/main/res/layout/home_talking_list_item.xml
+++ b/app/src/main/res/layout/home_talking_list_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="150px"
         android:layout_marginLeft="45px"
+        android:padding="20px"
         android:layout_marginTop="50px"
         android:background="@drawable/bolder_style"
         android:gravity="center|left"
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="150px"
         android:layout_gravity="right"
+        android:padding="20px"
         android:layout_marginRight="45px"
         android:background="@drawable/bolder_style"
         android:gravity="center|right"
